# reverse-turing-test

./: .gitignore  CLAUDE.md  README.md  analyze_strategies.py  claude_with_tools.py  experiment1.py  gamemaster.py  games.json  last_claude_response_raw.txt  lib.md  listen_to_humans.py  overview.py  plot_results.py  pyproject.toml  requirements.txt  test_simple.py  test_utils.py  turingtest.py  utils.py  viewer.html
analysis/: classify_strategies.py  make_figures.py  new_exp_stats.py  strategy_results.json
assets/: game_explorer.html
experiments/: .gitignore  exp1.py  exp1b.py  exp2_informed_candidates.py  exp3_identity_priming.py  exp3_pilot.py  exp4_adversarial_hiding.py  exp5_capability_probing.py  exp5_context_vs_identity.py  exp5_generate_conversations.py  exp5_weights_vs_context.py  exp6_deception_detection.py  exp6_fable_pilot.py  exp6_spiral_personas.py  experiment1.py  experiment_spiral.py  litellm_shim.py
experiments/exp1/: game_anthropic_claude-opus-4.5_seed0.json  game_anthropic_claude-opus-4.5_seed1.json  game_anthropic_claude-opus-4.5_seed2.json  game_anthropic_claude-opus-4.5_seed3.json  game_anthropic_claude-opus-4.5_seed4.json  game_anthropic_claude-opus-4.5_seed5.json  game_anthropic_claude-opus-4.5_seed6.json  game_anthropic_claude-opus-4.5_seed7.json  game_anthropic_claude-opus-4.5_seed8.json  (+81 more)
prompts/: __init__.py  bing.txt  identity_personas.py  spiral.py
spiral/: REPORT.md  eval_results.json  evaluate_spiral_personas.py  evaluator_prompts.yaml  generate_conversations.py  human_personas.py  talk_to.py
widgets/: build_game_explorer.py
(+752 files in other folders)
