[project]
name = "reverse-turing-test"
version = "0.1.0"
description = "Reverse Turing test where LLM judges try to identify their twin among candidates"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "localrouter==0.2.15",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["turingtest.py", "plot_results.py", "analyze_strategies.py", "prompts"]
